# deep_learning

./: 01_OpenCV기초.ipynb  01_전이학습_연예인분류기.ipynb  02_01_딥러닝_맛보기.ipynb  02_전이학습_VGG모델.ipynb  03_01_회귀모델링.ipynb  03_전이학습_ResNet.ipynb  04_01_분류모델링_이진분류.ipynb  04_02_분류모델링_다중분류.ipynb  05_01_CNN.ipynb  06_01_성능최적화_모델복잡도.ipynb  06_02_성능최적화_과적합방지.ipynb  06_03_클래스_선언.ipynb  README.md  [참고]feature_map.ipynb  cv_01_OpenCV기초.ipynb  cv_02_OpenCV고급.ipynb  cv_03_동영상처리.ipynb  cv_04_얼굴검출.ipynb  mp_01_얼굴감지.ipynb  mp_02_핸드트래킹.ipynb  mp_03_자세감지.ipynb  mp_실습01_안경씌우기.ipynb  mp_실습02_핸드트래킹으로_그림그리기.ipynb  mp_실습03_피아노.ipynb  mp_실습04_사진으로_포즈검출.ipynb  pyproject.toml  실습01_회귀모델링.ipynb  실습02_이진분류_모델링.ipynb  실습03_다중분류_모델링.ipynb  실습04_CNN_모델링.ipynb  실습05_종합실습.ipynb  실습06_연예인_분류기.ipynb
